fixing dark mode && scroll animation

--- a/src/output.css
+++ b/src/output.css
@@ -2715,6 +2715,16 @@ details.collapse summary::-webkit-details-marker {
   background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 
+.bg-red-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
+}
+
+.bg-red-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
+}
+
 .fill-base-100 {
   fill: var(--fallback-b1,oklch(var(--b1)/1));
 }
